make translation options more scalable and parameterized